hard-gists/137653/run.log
=== Docker Run Log for 137653 ===
Started at: Mi 29. Okt 12:10:44 CET 2025

[2025-10-29 12:10:45] START: Running container for 137653
[2025-10-29 12:10:45] SUCCESS: Container 6f5c03c5d2cb97da8c455719e1d6c25356cf48b32791a8e9c68fe18e54e7f552 started for 137653
=== Container logs for 137653 ===
  File "/snippet.py", line 70
    print parsed_player_data
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 137653 ===
[2025-10-29 12:10:47] INFO: Container 6f5c03c5d2cb97da8c455719e1d6c25356cf48b32791a8e9c68fe18e54e7f552 has stopped
